Capstone/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cap-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
        - path: /api/sandbox
          pathType: Prefix
          backend:
            service:
              name: cap-service
              port:
               number: 80
